@@ -13,6 +13,7 @@ Bug fixes for the 1.4 release.
 
 * Fix a compilation error with Mac OS X.
 * Fix crash at exit when a surface has a movement with callback (#699).
+* Fix crash when removing a custom entity (#690).
 
 _______________________________
 
